<resources>
    <string name="app_name">Sport Quiz</string>
    <string name="score">Score: </string>
    <string name="scoreResultActivity">Score</string>
    <string name="finalScore">0</string>
    <string name="Question"> Go</string>
    <string name="Choice1">A</string>
    <string name="Choice2">B</string>
    <string name="Choice3">C</string>
    <string name="Choice4">D</string>
    <string name="next">Next</string>
    <string name="restart">Restart</string>
    <string name="goodJob">Good Job</string>
    <string name="queScore">Que: 0/10</string>
</resources>
